fixed logo z-index to be on top for link to all posts

--- a/app/styles/partials/_nav.scss
+++ b/app/styles/partials/_nav.scss
@@ -25,6 +25,7 @@
   float: left;
   height: 50px;
   margin-left: 20px;
+  z-index: 1000;
 }
 
 .logo {
